------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

May 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added version information to bone files
	* Broken and intact war hammers, a torn cloak and a vacuum cleaner added to
	  item.pcx by Kahvi
	* Broken and intact war hammer wielded pictures added to humanoid.pcx by me
	* Added hammer item (worse than war hammer)
	* Ikiros now uses a normal hammer instead of war hammer
	* Cloaks can now break
	* Broken items now have unique material configurations, which are usually
	  much better than intact items'; this might make repairing techniques more
	  important

May 3 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Divided wood to the following materials: balsa, pine, fir, birch, oak, teak
	  and ebony
	* All walls in New Attnam and in the underwater tunnel are now made of balsa,
	  and fir dominates the northern architecture
	* Arcanite's density reduced from 4000 to 800 g/cm^3 to make it suitable for
	  staves
	* Added octiron, which is a light but extremely hard staff material
	* Added staff of wondrous smells
	* The dark archmage is no longer burdened
	* Added cloaks of fire and electricity resistances
	* Corrected a bug that allowed bonefiles to to be generated in levels where
	  the player had already been
	* Thunder hammer was perhaps little too good, so I increased its lightnings'
	  range to 4, so that it will hit the player in some circumstances, which are
	  however always easily recognisable and avoidable

May 2 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a truly horrible bug in the sparkle position randomization code
	  that only appeared when compiled with gcc